[package]
name = "clamber-core"
version = "0.1.0"
edition = "2024"
authors = ["Clamber println_g1@163.com"]
description = "library for clamber"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Clamber-L/clamber-core-rust"
homepage = "https://github.com/Clamber-L/clamber-core-rust"
documentation = "https://docs.rs/clamber-core-rust"

[dependencies]
