[package]
name = "clamber-core"
version = "0.1.5"
edition = "2024"
authors = ["Clamber println_g1@163.com"]
description = "library for clamber"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Clamber-L/clamber-core-rust"
homepage = "https://github.com/Clamber-L/clamber-core-rust"
documentation = "https://docs.rs/clamber-core"
readme = "README.md"

[dependencies]
chrono = "0.4.41"
jwt = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "chrono"] }
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
sha1 = "0.10.6"
bytes = "1.9.0"
argon2 = "0.5.3"
derive_builder = "0.20.2"
once_cell = "1.20.2"
anyhow = "1.0"
thiserror = "2.0.16"
twitter_snowflake = "1.0.2"
config = "0.15.15"
toml = "0.9.5"
serde_yaml = "0.9.34+deprecated"

[dev-dependencies]
tempfile = "3.13.0"

[[example]]
name = "jwt_usage"
path = "examples/jwt_usage.rs"

[[example]]
name = "error_handling"
path = "examples/error_handling.rs"

[[example]]
name = "beautiful_logs_custom"
path = "examples/beautiful_logs_custom.rs"

[[example]]
name = "snowflake_example"
path = "examples/snowflake_example.rs"
